@@ -18,7 +18,9 @@ import org.apache.lucene.store.NIOFSDirectory;
 import org.apache.lucene.util.quantization.OptimizedScalarQuantizer;
 import org.elasticsearch.common.logging.LogConfigurator;
 import org.elasticsearch.core.IOUtils;
+import org.elasticsearch.index.codec.vectors.diskbbq.next.ESNextDiskBBQVectorsFormat;
 import org.elasticsearch.simdvec.ES91OSQVectorsScorer;
+import org.elasticsearch.simdvec.ESNextOSQVectorsScorer;
 import org.elasticsearch.simdvec.internal.vectorization.ESVectorizationProvider;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -43,7 +45,7 @@ import java.util.concurrent.TimeUnit;
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @State(Scope.Benchmark)
 // first iteration is complete garbage, so make sure we really warmup
-@Warmup(iterations = 3, time = 1)
+@Warmup(iterations = 4, time = 1)
 // real iterations. not useful to spend tons of time here, better to fork more
 @Measurement(iterations = 5, time = 1)
 // engage some noise reduction
@@ -54,16 +56,16 @@ public class OSQScorerBenchmark {
         LogConfigurator.configureESLogging(); // native access requires logging to be initialized
     }
 
-    @Param({ "16", "32", "64", "128", "256" })
-    int bulkSize;
-
     @Param({ "384", "782", "1024" })
     int dims;
 
+    @Param({ "1", "2", "4" })
+    int bits;
+
     int length;
 
-    final int numVectors = 16 * 64;
-    final int numQueries = 10;
+    int numVectors = ES91OSQVectorsScorer.BULK_SIZE * 10;
+    int numQueries = 10;
 
     byte[][] binaryVectors;
     byte[][] binaryQueries;
@@ -71,8 +73,8 @@ public class OSQScorerBenchmark {
     float centroidDp;
 
     byte[] scratch;
-    ES91OSQVectorsScorer scorerMmap;
-    ES91OSQVectorsScorer scorerNfios;
+    ESNextOSQVectorsScorer scorerMmap;
+    ESNextOSQVectorsScorer scorerNfios;
 
     Directory dirMmap;
     IndexInput inMmap;
@@ -86,7 +88,13 @@ public class OSQScorerBenchmark {
     @Setup
     public void setup() throws IOException {
         Random random = new Random(123);
-        this.length = OptimizedScalarQuantizer.discretize(dims, 64) / 8;
+
+        this.length = switch (bits) {
+            case 1 -> ESNextDiskBBQVectorsFormat.QuantEncoding.ONE_BIT_4BIT_QUERY.getDocPackedLength(dims);
+            case 2 -> ESNextDiskBBQVectorsFormat.QuantEncoding.TWO_BIT_4BIT_QUERY.getDocPackedLength(dims);
+            case 4 -> ESNextDiskBBQVectorsFormat.QuantEncoding.FOUR_BIT_SYMMETRIC.getDocPackedLength(dims);
+            default -> throw new IllegalArgumentException("Unsupported bits: " + bits);
+        };
 
         binaryVectors = new byte[numVectors][length];
         for (byte[] binaryVector : binaryVectors) {
@@ -97,9 +105,9 @@ public class OSQScorerBenchmark {
         dirNiofs = new NIOFSDirectory(Files.createTempDirectory("vectorDataNFIOS"));
         IndexOutput outMmap = dirMmap.createOutput("vectors", IOContext.DEFAULT);
         IndexOutput outNfios = dirNiofs.createOutput("vectors", IOContext.DEFAULT);
-        byte[] correctionBytes = new byte[14 * bulkSize];
-        for (int i = 0; i < numVectors; i += bulkSize) {
-            for (int j = 0; j < bulkSize; j++) {
+        byte[] correctionBytes = new byte[14 * ES91OSQVectorsScorer.BULK_SIZE];
+        for (int i = 0; i < numVectors; i += ES91OSQVectorsScorer.BULK_SIZE) {
+            for (int j = 0; j < ES91OSQVectorsScorer.BULK_SIZE; j++) {
                 outMmap.writeBytes(binaryVectors[i + j], 0, binaryVectors[i + j].length);
                 outNfios.writeBytes(binaryVectors[i + j], 0, binaryVectors[i + j].length);
             }
@@ -111,8 +119,14 @@ public class OSQScorerBenchmark {
         outNfios.close();
         inMmap = dirMmap.openInput("vectors", IOContext.DEFAULT);
         inNiofs = dirNiofs.openInput("vectors", IOContext.DEFAULT);
+        int binaryQueryLength = switch (bits) {
+            case 1 -> ESNextDiskBBQVectorsFormat.QuantEncoding.ONE_BIT_4BIT_QUERY.getQueryPackedLength(dims);
+            case 2 -> ESNextDiskBBQVectorsFormat.QuantEncoding.TWO_BIT_4BIT_QUERY.getQueryPackedLength(dims);
+            case 4 -> ESNextDiskBBQVectorsFormat.QuantEncoding.FOUR_BIT_SYMMETRIC.getQueryPackedLength(dims);
+            default -> throw new IllegalArgumentException("Unsupported bits: " + bits);
+        };
 
-        binaryQueries = new byte[numVectors][4 * length];
+        binaryQueries = new byte[numVectors][binaryQueryLength];
         for (byte[] binaryVector : binaryVectors) {
             random.nextBytes(binaryVector);
         }
@@ -125,9 +139,27 @@ public class OSQScorerBenchmark {
         centroidDp = random.nextFloat();
 
         scratch = new byte[length];
-        scorerMmap = ESVectorizationProvider.getInstance().newES91OSQVectorsScorer(inMmap, bulkSize, dims);
-        scorerNfios = ESVectorizationProvider.getInstance().newES91OSQVectorsScorer(inNiofs, bulkSize, dims);
-        scratchScores = new float[bulkSize];
+        final int docBits;
+        final int queryBits = switch (bits) {
+            case 1 -> {
+                docBits = 1;
+                yield 4;
+            }
+            case 2 -> {
+                docBits = 2;
+                yield 4;
+            }
+            case 4 -> {
+                docBits = 4;
+                yield 4;
+            }
+            default -> throw new IllegalArgumentException("Unsupported bits: " + bits);
+        };
+        scorerMmap = ESVectorizationProvider.getInstance()
+            .newESNextOSQVectorsScorer(inMmap, (byte) queryBits, (byte) docBits, dims, length);
+        scorerNfios = ESVectorizationProvider.getInstance()
+            .newESNextOSQVectorsScorer(inNiofs, (byte) queryBits, (byte) docBits, dims, length);
+        scratchScores = new float[16];
         corrections = new float[3];
     }
 
@@ -136,23 +168,29 @@ public class OSQScorerBenchmark {
         IOUtils.close(dirMmap, inMmap, dirNiofs, inNiofs);
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentOnlyVectorMmapScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVector(bh, inMmap, scorerMmap);
     }
 
+    @Benchmark
+    @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
     public void scoreFromMemorySegmentOnlyVectorMmapVect(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVector(bh, inMmap, scorerMmap);
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentOnlyVectorNiofsScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVector(bh, inNiofs, scorerNfios);
     }
 
+    @Benchmark
+    @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
     public void scoreFromMemorySegmentOnlyVectorNiofsVect(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVector(bh, inNiofs, scorerNfios);
     }
 
-    private void scoreFromMemorySegmentOnlyVector(Blackhole bh, IndexInput in, ES91OSQVectorsScorer scorer) throws IOException {
+    private void scoreFromMemorySegmentOnlyVector(Blackhole bh, IndexInput in, ESNextOSQVectorsScorer scorer) throws IOException {
         for (int j = 0; j < numQueries; j++) {
             in.seek(0);
             for (int i = 0; i < numVectors; i++) {
@@ -177,28 +215,34 @@ public class OSQScorerBenchmark {
         }
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentOnlyVectorBulkMmapScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVectorBulk(bh, inMmap, scorerMmap);
     }
 
+    @Benchmark
+    @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
     public void scoreFromMemorySegmentOnlyVectorBulkMmapVect(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVectorBulk(bh, inMmap, scorerMmap);
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentOnlyVectorBulkNiofsScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVectorBulk(bh, inNiofs, scorerNfios);
     }
 
+    @Benchmark
+    @Fork(jvmArgsPrepend = { "--add-modules=jdk.incubator.vector" })
     public void scoreFromMemorySegmentOnlyVectorBulkNiofsVect(Blackhole bh) throws IOException {
         scoreFromMemorySegmentOnlyVectorBulk(bh, inNiofs, scorerNfios);
     }
 
-    private void scoreFromMemorySegmentOnlyVectorBulk(Blackhole bh, IndexInput in, ES91OSQVectorsScorer scorer) throws IOException {
+    private void scoreFromMemorySegmentOnlyVectorBulk(Blackhole bh, IndexInput in, ESNextOSQVectorsScorer scorer) throws IOException {
         for (int j = 0; j < numQueries; j++) {
             in.seek(0);
-            for (int i = 0; i < numVectors; i += bulkSize) {
-                scorer.quantizeScoreBulk(binaryQueries[j], bulkSize, scratchScores);
-                for (int k = 0; k < bulkSize; k++) {
+            for (int i = 0; i < numVectors; i += 16) {
+                scorer.quantizeScoreBulk(binaryQueries[j], ES91OSQVectorsScorer.BULK_SIZE, scratchScores);
+                for (int k = 0; k < ES91OSQVectorsScorer.BULK_SIZE; k++) {
                     in.readFloats(corrections, 0, corrections.length);
                     int addition = Short.toUnsignedInt(in.readShort());
                     float score = scorer.score(
@@ -220,6 +264,7 @@ public class OSQScorerBenchmark {
         }
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentAllBulkMmapScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentAllBulk(bh, inMmap, scorerMmap);
     }
@@ -230,6 +275,7 @@ public class OSQScorerBenchmark {
         scoreFromMemorySegmentAllBulk(bh, inMmap, scorerMmap);
     }
 
+    @Benchmark
     public void scoreFromMemorySegmentAllBulkNiofsScalar(Blackhole bh) throws IOException {
         scoreFromMemorySegmentAllBulk(bh, inNiofs, scorerNfios);
     }
@@ -240,10 +286,10 @@ public class OSQScorerBenchmark {
         scoreFromMemorySegmentAllBulk(bh, inNiofs, scorerNfios);
     }
 
-    private void scoreFromMemorySegmentAllBulk(Blackhole bh, IndexInput in, ES91OSQVectorsScorer scorer) throws IOException {
+    private void scoreFromMemorySegmentAllBulk(Blackhole bh, IndexInput in, ESNextOSQVectorsScorer scorer) throws IOException {
         for (int j = 0; j < numQueries; j++) {
             in.seek(0);
-            for (int i = 0; i < numVectors; i += bulkSize) {
+            for (int i = 0; i < numVectors; i += 16) {
                 scorer.scoreBulk(
                     binaryQueries[j],
                     result.lowerInterval(),
